--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -735,7 +735,8 @@
             "potjeswijzer": {
                 "start_request": "Anfrage"
             },
-            "start_request": "Aktivieren Sie"
+            "start_request": "Aktivieren Sie",
+            "open_payouts": "Offene Auszahlungen"
         },
         "criteria": {
             "key": "{{key}}"
@@ -874,12 +875,12 @@
             "view_file": "Datei anzeigen"
         },
         "file_uploader": {
-            "attachments": "Anhänge",
             "max_size": "max. Größe 8Mb",
             "or": "oder",
             "title": "Ein Dokument hochladen",
             "upload_button": "Ein Dokument hochladen",
-            "max_files": "bis zu {{ count }} Dateien"
+            "max_files": "bis zu {{ count }} Dateien",
+            "attachments": "Anhänge"
         },
         "info_box": {
             "2fa_description": "Weitere Informationen über 2FA finden Sie bei uns:",
@@ -1906,7 +1907,8 @@
         "empty": {
             "button": "Zu den Fonds gehen",
             "subtitle": "Derzeit haben Sie keine Auszahlungen",
-            "title": "Keine Auszahlungen"
+            "title": "Keine Auszahlungen",
+            "button_payout": "Übertragung"
         },
         "labels": {
             "created_at": "Ausbezahlt am",
@@ -1915,7 +1917,12 @@
             "iban_to_name": "IBAN-Name (bis)"
         },
         "search": "Suche",
-        "title": "Auszahlungen"
+        "title": "Auszahlungen",
+        "create_card": {
+            "button": "Übertragung",
+            "description": "Erstellen Sie eine Überweisung von Ihrem Guthaben.",
+            "title": "Überweisung auf ein Bankkonto"
+        }
     },
     "pdf_preview": {
         "buttons": {
@@ -2370,7 +2377,8 @@
             "category": "Kategorien",
             "payment_options": "Zahlungsmöglichkeiten",
             "payment_options_info": "Lesen Sie mehr über Zahlungsmöglichkeiten",
-            "price_to": "An"
+            "price_to": "An",
+            "price_type_option_payout": "Auszahlung auf ein Bankkonto"
         },
         "sort": {
             "created_at_asc": "Älteste zuerst",
@@ -3379,7 +3387,8 @@
             "subtract": "Subtraktion",
             "title": "Transaktionen",
             "top_up": "Verbessert",
-            "expired_on": "Abgelaufen am {{ date }}"
+            "expired_on": "Abgelaufen am {{ date }}",
+            "payout": "Auszahlung"
         },
         "actions": {
             "choose_action": {
@@ -3389,7 +3398,9 @@
             "save_qr": "QR-Code speichern",
             "share_with_provider": "QR-Code mit Anbieter teilen",
             "view_all_products": "Alle Produkte anzeigen",
-            "declaration_request": "Kostendeckung"
+            "declaration_request": "Kostendeckung",
+            "transfer_to_bank": "Überweisung auf ein Bankkonto",
+            "transfer_to_bank_description": "Wählen Sie den Kredit und den Betrag, den Sie auf Ihr Bankkonto überweisen möchten."
         },
         "details": {
             "records": {
@@ -3424,6 +3435,26 @@
         "fund_details": {
             "title": "Informationen über die Regelung",
             "view": "Mehr lesen"
+        },
+        "payout": {
+            "accept_compliance_rules": "Ich verwende dieses Geld nur, um Produkte zu kaufen, die im Rahmen dieses Fonds erlaubt sind.",
+            "accept_compliance_rules_label": "Bedingungen",
+            "amount": "Betrag",
+            "cancel": "Abbrechen",
+            "iban": "IBAN",
+            "iban_name": "Kontoinhaber",
+            "submit": "Übertragung",
+            "success": {
+                "close": "Schließen Sie",
+                "description": "Ihr Überweisungsantrag wurde abgeschickt. Die Bearbeitung kann einige Zeit in Anspruch nehmen.",
+                "title": "Übertragung beantragt"
+            },
+            "transfer_to_bank": "Überweisung auf ein Bankkonto",
+            "transfer_to_bank_description": "Wählen Sie den Kredit und den Betrag, den Sie auf Ihr Bankkonto überweisen möchten.",
+            "voucher_label": "Kredit",
+            "warning_count_reached": "Die maximale Anzahl der Auszahlungen für dieses Guthaben wurde erreicht.",
+            "warning_not_enough_amount_fixed": "Dieses Guthaben muss mindestens {{ amount }} für eine Auszahlung umfassen.",
+            "warning_not_enough_amount_min": "Dieses Guthaben muss mindestens {{ min }} für eine Auszahlung umfassen."
         }
     },
     "vouchers": {
@@ -3583,7 +3614,8 @@
         "session_expired": {
             "description": "Loggen Sie sich wieder ein und versuchen Sie es erneut.",
             "title": "Die Sitzung ist abgelaufen!"
-        }
+        },
+        "payout_created": "Auszahlung beantragt."
     },
     "read_speaker": {
         "read_aloud": "Lesen für",
@@ -3650,7 +3682,9 @@
         "info_option_informational_title": "Nur im Geschäft",
         "info_option_regular_description": "Das Produkt hat einen Festpreis. Das ist der zu zahlende Betrag, zum Beispiel 10 Euro.",
         "info_option_regular_title": "Preis",
-        "title": "Zahlungsmöglichkeiten"
+        "title": "Zahlungsmöglichkeiten",
+        "info_option_payout_description": "Führen Sie eine Überweisung von Ihrem Guthaben auf die bei der Beantragung des Fonds angegebene Kontonummer durch.",
+        "info_option_payout_title": "Auszahlung auf ein Bankkonto"
     },
     "pincode_control": {
         "aria_label_num": "Abbildung {{current}} der {{total}}",
